--- a/admin/language/en-GB/en-GB.com_blog.ini
+++ b/admin/language/en-GB/en-GB.com_blog.ini
@@ -28,6 +28,8 @@ COM_BLOG_CONFIG_CATEGORY_SETTINGS_DESC="These settings apply for Articles Catego
 COM_BLOG_CONFIG_EDITOR_LAYOUT="These options control the layout of the article editing page."
 COM_BLOG_CONFIG_INTEGRATION_SETTINGS_DESC="These settings determine how the Article Component will integrate with other extensions."
 COM_BLOG_CONFIG_LIST_SETTINGS_DESC="These settings apply for List Layouts Options unless they are changed for a specific menu item or category."
+COM_BLOG_CONFIG_SEF_ADVANCED_DESC="Choose whether to use advanced SEF method of rendering article links."
+COM_BLOG_CONFIG_SEF_ADVANCED_LABEL="SEF Advanced"
 COM_BLOG_CONFIGURATION="Articles: Options"
 COM_BLOG_CREATE_ARTICLE_CATEGORY_LABEL="Default Category"
 COM_BLOG_CREATE_ARTICLE_CATEGORY_DESC="If set to 'Yes', this page will only let you create articles in the category selected below."
