--- a/admin/language/en-GB/en-GB.com_blog.ini
+++ b/admin/language/en-GB/en-GB.com_blog.ini
@@ -63,6 +63,17 @@ COM_BLOG_FIELD_EXTRA2_DESC="You may enter an Extra 2."
 COM_BLOG_FIELD_EXTRA2_LABEL="Extra 2"
 COM_BLOG_FIELD_EXTRA3_DESC="You may enter an Extra 3."
 COM_BLOG_FIELD_EXTRA3_LABEL="Extra 3"
+COM_BLOG_FIELDSET_IMAGEGALLERY="Image Gallery"
+COM_BLOG_FIELD_GALLERY_DESC=""
+COM_BLOG_FIELD_GALLERY_LABEL="Image Gallery"
+COM_BLOG_SUBFORM_FIELD_IMAGE_DESC=""
+COM_BLOG_SUBFORM_FIELD_IMAGE_LABEL="Image"
+COM_BLOG_SUBFORM_FIELD_CAPTION_DESC=""
+COM_BLOG_SUBFORM_FIELD_CAPTION_LABEL="Caption"
+COM_BLOG_SUBFORM_FIELD_FEATURED_DESC="Choose to show this image before other images."
+COM_BLOG_SUBFORM_FIELD_FEATURED_LABEL="Featured"
+COM_BLOG_SUBFORM_FIELD_CAPTIONTEXT_DESC=""
+COM_BLOG_SUBFORM_FIELD_CAPTIONTEXT_LABEL="Caption Text"
 COM_BLOG_FIELD_FEATURED_DESC="Assign the article to the featured content layout."
 COM_BLOG_FIELD_FULL_DESC="Select or upload an image for the single article display."
 COM_BLOG_FIELD_FULL_LABEL="Full Article Image"
