--- a/admin/language/en-GB.com_blog.ini
+++ b/admin/language/en-GB.com_blog.ini
@@ -238,3 +238,8 @@ JLIB_APPLICATION_ERROR_BATCH_CANNOT_CREATE="You are not allowed to create new ar
 JLIB_APPLICATION_ERROR_BATCH_CANNOT_EDIT="You are not allowed to edit one or more of these articles."
 JLIB_RULES_SETTING_NOTES="Changes apply to this component only.<br /><em><strong>Inherited</strong></em> - a Global Configuration setting or higher level setting is applied.<br /><em><strong>Denied</strong></em> always wins - whatever is set at the Global or higher level and applies to all child elements.<br /><em><strong>Allowed</strong></em> will enable the action for this component unless overruled by a Global Configuration setting."
 JLIB_RULES_SETTING_NOTES_ITEM="Changes apply to this article only.<br /><em><strong>Inherited</strong></em> - a Global Configuration setting or higher level setting is applied.<br /><em><strong>Denied</strong></em> always wins - whatever is set at the Global or higher level and applies to all child elements.<br /><em><strong>Allowed</strong></em> will enable the action for this component unless overruled by a Global Configuration setting."
+
+MOD_MENU_COM_BLOG_ARTICLE_MANAGER="Articles"
+MOD_MENU_COM_BLOG_CATEGORY_MANAGER="Categories"
+MOD_MENU_COM_BLOG_NEW_ARTICLE="Add New Article"
+MOD_MENU_COM_BLOG_NEW_CATEGORY="Add New Category"
