Tag styles and tweaks to config defaults

--- a/admin/language/en-GB.com_blog.sys.ini
+++ b/admin/language/en-GB.com_blog.sys.ini
@@ -43,3 +43,7 @@ COM_BLOG_FORM_VIEW_DEFAULT_TITLE="Create Article"
 COM_BLOG_TAGS_ARTICLE="Article"
 COM_BLOG_TAGS_CATEGORY="Article Category"
 COM_BLOG_XML_DESCRIPTION="Article management component."
+MOD_MENU_COM_BLOG_ARTICLE_MANAGER="Articles"
+MOD_MENU_COM_BLOG_CATEGORY_MANAGER="Categories"
+MOD_MENU_COM_BLOG_NEW_ARTICLE="Add New Article"
+MOD_MENU_COM_BLOG_NEW_CATEGORY="Add New Category"
