Minor text update to COM_BLOG_XML_DESCRIPTION language string

--- a/admin/language/en-GB.com_blog.ini
+++ b/admin/language/en-GB.com_blog.ini
@@ -231,7 +231,7 @@ COM_BLOG_URL_FIELD_A_BROWSERNAV_LABEL="URL A Target Window"
 COM_BLOG_URL_FIELD_B_BROWSERNAV_LABEL="URL B Target Window"
 COM_BLOG_URL_FIELD_C_BROWSERNAV_LABEL="URL C Target Window"
 COM_BLOG_WARNING_PROVIDE_VALID_NAME="Please provide a valid, non-blank title."
-COM_BLOG_XML_DESCRIPTION="Article management component."
+COM_BLOG_XML_DESCRIPTION="Article management component (a fork of com_content)."
 
 JGLOBAL_NO_ITEM_SELECTED="No articles selected"
 JLIB_APPLICATION_ERROR_BATCH_CANNOT_CREATE="You are not allowed to create new articles in this category."
