--- a/admin/language/en-GB.com_blog.sys.ini
+++ b/admin/language/en-GB.com_blog.sys.ini
@@ -42,7 +42,7 @@ COM_BLOG_FORM_VIEW_DEFAULT_OPTION="Create"
 COM_BLOG_FORM_VIEW_DEFAULT_TITLE="Create Article"
 COM_BLOG_TAGS_ARTICLE="Article"
 COM_BLOG_TAGS_CATEGORY="Article Category"
-COM_BLOG_XML_DESCRIPTION="Article management component."
+COM_BLOG_XML_DESCRIPTION="Article management component (a fork of com_content)."
 MOD_MENU_COM_BLOG_ARTICLE_MANAGER="Articles"
 MOD_MENU_COM_BLOG_CATEGORY_MANAGER="Categories"
 MOD_MENU_COM_BLOG_NEW_ARTICLE="Add New Article"
