--- a/admin/language/en-GB.com_blog.ini
+++ b/admin/language/en-GB.com_blog.ini
@@ -1,6 +1,6 @@
 ; Joomla! Project
 ; Copyright (C) 2005 - 2019 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
 COM_BLOG="Blog Articles"
@@ -36,12 +36,14 @@ COM_BLOG_CREATE_ARTICLE_CATEGORY_LABEL="Default Category"
 COM_BLOG_CREATE_ARTICLE_CATEGORY_DESC="If set to 'Yes', this page will only let you create articles in the category selected below."
 COM_BLOG_CREATE_ARTICLE_CUSTOM_CANCEL_REDIRECT_DESC="If set to 'Yes', you can set a redirection page, distinct from above 'Submission/Cancel Redirect', to redirect to when user Cancels article submission.<br />If set to 'No', when user Cancels article submission, the user is redirected to the above 'Submission/Cancel Redirect' page."
 COM_BLOG_CREATE_ARTICLE_CUSTOM_CANCEL_REDIRECT_LABEL="Custom Redirect on Cancel"
+COM_BLOG_CREATE_ARTICLE_ERROR="When default category is enabled, a category should be selected."
 COM_BLOG_CREATE_ARTICLE_REDIRECTMENU_DESC="Select the page the user will be redirected to after a successful article submission and after cancel (if not set differently below). The default is to redirect to the home page."
 COM_BLOG_CREATE_ARTICLE_REDIRECTMENU_LABEL="Submission/Cancel Redirect"
 COM_BLOG_DRILL_CATEGORIES_LABEL="List or Blog: after choosing the display,<br />make sure you define the Options in the desired layout."
 COM_BLOG_DRILL_DOWN_LAYOUT_DESC="When drilling down to a category, show articles in a list or blog layout."
 COM_BLOG_DRILL_DOWN_LAYOUT_LABEL="List or Blog Layout"
 COM_BLOG_EDIT_ARTICLE="Edit Article"
+COM_BLOG_EDIT_CATEGORY="Edit Category"
 COM_BLOG_EDITORCONFIG_FIELDSET_LABEL="Configure Edit Screen"
 COM_BLOG_EDITING_LAYOUT="Editing Layout"
 COM_BLOG_ERROR_ALL_LANGUAGE_ASSOCIATED="A content item set to All languages can't be associated. Associations have not been set."
