--- a/admin/language/en-GB.com_blog.ini
+++ b/admin/language/en-GB.com_blog.ini
@@ -1,5 +1,5 @@
 ; Joomla! Project
-; Copyright (C) 2005 - 2019 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2020 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
@@ -34,6 +34,7 @@ COM_BLOG_CREATE_ARTICLE_CANCEL_REDIRECT_MENU_DESC="Select the page the user will
 COM_BLOG_CREATE_ARTICLE_CANCEL_REDIRECT_MENU_LABEL="Cancel Redirect"
 COM_BLOG_CREATE_ARTICLE_CATEGORY_LABEL="Default Category"
 COM_BLOG_CREATE_ARTICLE_CATEGORY_DESC="If set to 'Yes', this page will only let you create articles in the category selected below."
+COM_BLOG_CREATE_ARTICLE_CATEGORY_LABEL="Specific Category"
 COM_BLOG_CREATE_ARTICLE_CUSTOM_CANCEL_REDIRECT_DESC="If set to 'Yes', you can set a redirection page, distinct from above 'Submission/Cancel Redirect', to redirect to when user Cancels article submission.<br />If set to 'No', when user Cancels article submission, the user is redirected to the above 'Submission/Cancel Redirect' page."
 COM_BLOG_CREATE_ARTICLE_CUSTOM_CANCEL_REDIRECT_LABEL="Custom Redirect on Cancel"
 COM_BLOG_CREATE_ARTICLE_ERROR="When default category is enabled, a category should be selected."
