Added sources field as a subform

--- a/site/language/en-GB.com_blog.ini
+++ b/site/language/en-GB.com_blog.ini
@@ -55,6 +55,7 @@ COM_BLOG_FLOAT_LABEL="Image Float"
 COM_BLOG_FORM_EDIT_ARTICLE="Edit an article"
 COM_BLOG_FORM_FILTER_LEGEND="Filters"
 COM_BLOG_FORM_FILTER_SUBMIT="Filter"
+COM_BLOG_HEADING_SOURCES="Sources"
 COM_BLOG_HEADING_TITLE="Title"
 COM_BLOG_HITS_FILTER_LABEL="Hits Filter"
 COM_BLOG_IMAGES_AND_URLS="Images and Links"
