Add an alternative text editor field for sources

--- a/admin/language/en-GB.com_blog.ini
+++ b/admin/language/en-GB.com_blog.ini
@@ -131,6 +131,8 @@ COM_BLOG_FIELD_SECONDARY_CATEGORIES_DESC="Choose one or more additional categori
 COM_BLOG_FIELD_SECONDARY_CATEGORIES_LABEL="Secondary Categories"
 COM_BLOG_FIELD_SOURCES_DESC=""
 COM_BLOG_FIELD_SOURCES_LABEL="Sources"
+COM_BLOG_FIELD_SOURCES_BLOB_DESC="An alternative method for inputting sources"
+COM_BLOG_FIELD_SOURCES_BLOB_LABEL="Sources"
 COM_BLOG_FIELD_VIDEO_URI_DESC="A YouTube/Vimeo video URL"
 COM_BLOG_FIELD_VIDEO_URI_LABEL="Video URL"
 COM_BLOG_FIELDSET_IMAGEGALLERY="Image Gallery"
