Added a toggle to switch between the two sources fields
The sources subform/repeatable list will probably need to be fleshed a bit more later… 🤔

--- a/admin/language/en-GB.com_blog.ini
+++ b/admin/language/en-GB.com_blog.ini
@@ -129,6 +129,10 @@ COM_BLOG_FIELD_GALLERY_DESC=""
 COM_BLOG_FIELD_GALLERY_LABEL="Image Gallery"
 COM_BLOG_FIELD_SECONDARY_CATEGORIES_DESC="Choose one or more additional categories to associate this item with."
 COM_BLOG_FIELD_SECONDARY_CATEGORIES_LABEL="Secondary Categories"
+COM_BLOG_FIELD_TOGGLE_SOURCES_TYPE_DESC="Toggle between an editor and a repeatable list of premade fields"
+COM_BLOG_FIELD_TOGGLE_SOURCES_TYPE_LABEL="Sources Field Type"
+SOURCES_TOGGLE_EDITOR="Editor"
+SOURCES_TOGGLE_LIST="List"
 COM_BLOG_FIELD_SOURCES_DESC=""
 COM_BLOG_FIELD_SOURCES_LABEL="Sources"
 COM_BLOG_FIELD_SOURCES_BLOB_DESC="An alternative method for inputting sources"
