--- a/admin/language/en-GB.com_blog.ini
+++ b/admin/language/en-GB.com_blog.ini
@@ -171,6 +171,7 @@ COM_BLOG_FLOAT_INTRO_LABEL="Intro Image Float"
 COM_BLOG_HEADING_ASSOCIATION="Association"
 COM_BLOG_HEADING_DATE_CREATED="Date Created"
 COM_BLOG_HEADING_DATE_MODIFIED="Date Modified"
+COM_BLOG_HEADING_DATE_PUBLISHED="Date Published"
 COM_BLOG_HEADING_DATE_PUBLISH_UP="Start Publishing"
 COM_BLOG_HEADING_DATE_PUBLISH_DOWN="Finish Publishing"
 COM_BLOG_ID_LABEL="ID"
@@ -251,6 +252,7 @@ COM_BLOG_WARNING_PROVIDE_VALID_NAME="Please provide a valid, non-blank title."
 COM_BLOG_XML_DESCRIPTION="Article management component (a fork of com_content)."
 
 JGLOBAL_NO_ITEM_SELECTED="No articles selected"
+JHELP_CONTENT_ARTICLE_MANAGER="edit_article"
 JLIB_APPLICATION_ERROR_BATCH_CANNOT_CREATE="You are not allowed to create new articles in this category."
 JLIB_APPLICATION_ERROR_BATCH_CANNOT_EDIT="You are not allowed to edit one or more of these articles."
 JLIB_RULES_SETTING_NOTES="Changes apply to this component only.<br /><em><strong>Inherited</strong></em> - a Global Configuration setting or higher level setting is applied.<br /><em><strong>Denied</strong></em> always wins - whatever is set at the Global or higher level and applies to all child elements.<br /><em><strong>Allowed</strong></em> will enable the action for this component unless overruled by a Global Configuration setting."
