--- a/admin/language/en-GB.com_blog.sys.ini
+++ b/admin/language/en-GB.com_blog.sys.ini
@@ -47,3 +47,10 @@ MOD_MENU_COM_BLOG_ARTICLE_MANAGER="Articles"
 MOD_MENU_COM_BLOG_CATEGORY_MANAGER="Categories"
 MOD_MENU_COM_BLOG_NEW_ARTICLE="Add New Article"
 MOD_MENU_COM_BLOG_NEW_CATEGORY="Add New Category"
+JGLOBAL_SEF_ADVANCED_DESC="Modern routing enables advanced features but may change your URLs. Legacy routing ensures full compatibility for existing sites. This is configured per component."
+JGLOBAL_SEF_ADVANCED_LABEL="URL Routing"
+JGLOBAL_SEF_ADVANCED_LEGACY="Legacy"
+JGLOBAL_SEF_ADVANCED_MODERN="Modern"
+JGLOBAL_SEF_NOIDS_DESC="Remove the IDs from the URLs of this component."
+JGLOBAL_SEF_NOIDS_LABEL="Remove IDs from URLs"
+JGLOBAL_SEF_TITLE="Routing"
