--- a/admin/language/en-GB.com_blog.ini
+++ b/admin/language/en-GB.com_blog.ini
@@ -74,6 +74,8 @@ COM_BLOG_FIELD_HITS_DESC="Number of hits for this article."
 COM_BLOG_FIELD_IMAGE_DESC="The image to be displayed."
 COM_BLOG_FIELD_IMAGE_ALT_DESC="Alternative text used for visitors without access to images."
 COM_BLOG_FIELD_IMAGE_ALT_LABEL="Alt Text"
+COM_BLOG_FIELD_IMAGE_ALT_EMPTY_DESC="Decorative Image - no description required"
+COM_BLOG_FIELD_IMAGE_ALT_EMPTY_LABEL="No Description"
 COM_BLOG_FIELD_IMAGE_CAPTION_DESC="Caption attached to the image."
 COM_BLOG_FIELD_IMAGE_CAPTION_LABEL="Caption"
 COM_BLOG_FIELD_IMAGE_OPTIONS="Image Options"
