Language fix for Read More links

--- a/site/language/en-GB.com_blog.ini
+++ b/site/language/en-GB.com_blog.ini
@@ -86,8 +86,8 @@ COM_BLOG_PUBLISHED_DATE_ON="Published: %s"
 COM_BLOG_PUBLISHING="Publishing"
 COM_BLOG_RATINGS="Rating"
 COM_BLOG_RATINGS_COUNT="Rating: %s"
-COM_BLOG_READ_MORE="Read more: "
-COM_BLOG_READ_MORE_TITLE="Read more ..."
+COM_BLOG_READ_MORE_TITLE="Read more: %s"
+COM_BLOG_READ_MORE="Read more ..."
 COM_BLOG_REGISTER_TO_READ_MORE="Register to read more ..."
 COM_BLOG_RIGHT="Right"
 COM_BLOG_SAVE_SUCCESS="Article saved."
